[package]
name = "bevy_editor_pls_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
bevy = { version = "0.13", default-features = false }
bevy-inspector-egui = "0.22.1"
indexmap = "2"
egui_dock.workspace = true
